// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. before resolving image 1`] = `
<ProgressiveImage
  placeholder="small.jpg"
  src="origin.jpg"
>
  <Img
    image="small.jpg"
    isLoaded={false}
    placeholder="small.jpg"
    src="origin.jpg"
  >
    <styled.div
      placeholder="small.jpg"
      src="origin.jpg"
      style={
        Object {
          "backgroundImage": "url(\\"small.jpg\\"",
          "filter": "blur(20px)",
          "opacity": 0.5,
        }
      }
    >
      <div
        className="sc-bdVaJa cmnijN"
        placeholder="small.jpg"
        src="origin.jpg"
        style={
          Object {
            "backgroundImage": "url(\\"small.jpg\\"",
            "filter": "blur(20px)",
            "opacity": 0.5,
          }
        }
      />
    </styled.div>
  </Img>
</ProgressiveImage>
`;

exports[`2. after resolving image 1`] = `
<ProgressiveImage
  placeholder="small.jpg"
  src="origin.jpg"
>
  <Img
    image="origin.jpg"
    isLoaded={true}
    placeholder="small.jpg"
    src="origin.jpg"
  >
    <styled.div
      placeholder="small.jpg"
      src="origin.jpg"
      style={
        Object {
          "backgroundImage": "url(\\"origin.jpg\\"",
          "filter": "none",
          "opacity": 1,
        }
      }
    >
      <div
        className="sc-bdVaJa cmnijN"
        placeholder="small.jpg"
        src="origin.jpg"
        style={
          Object {
            "backgroundImage": "url(\\"origin.jpg\\"",
            "filter": "none",
            "opacity": 1,
          }
        }
      />
    </styled.div>
  </Img>
</ProgressiveImage>
`;
